--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
       <div id="Post">
         <h1>Este es el título atractivo e interesante del post</h1>
         <p>Y este es el párrafo de inicio donde vamos a explicar lo que se puede hacer con ramas</p>
