--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
       <div id="Post">
         <h1>Este es el título atractivo e interesante del post</h1>
         <p>Y este es el párrafo de inicio donde vamos a explicar lo que se puede hacer con ramas</p>
+        <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que salir en conferencias o en youtube</p>
       </div>
     </div>
   </body>
