--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
       <div id="Post">
         <h1>Este es el título atractivo e interesante del post</h1>
         <p>Y este es el párrafo de inicio donde vamos a explicar lo que se puede hacer con ramas</p>
+        <p><img src="images/Andrea_CB.jfif" width="100%"></p>
         <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que salir en conferencias o en youtube</p>
         <p>Este blog trata acerca de Chikis, la gata negra y su entorno familiar</p>
         <p>Suscribete y dale like</p>
