--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu mejor Hyperblog</span>
+            <span id="tagline">Your first option on blogs</span>
         </div>
       <div id="Post">
         <h1>Este es el título atractivo e interesante del post</h1>
